static/css/columns.css
.col-lg-1-5 { width: 15.9%; }

.col-lg-2-5 { width: 20.8333%; }

.col-lg-9-5 { width: 79.1666666667%; }

.col-lg-10-5 { width: 87.5%; }


.col-lg-test1 { width: 15.8333333333%; }

.col-lg-test2 { width: 84.1666666667%; }

.column-wrapper {
    width:100%;
    display: flex;
    flex-direction: row;
}

.column-left {
    width: 19.6rem;
    height: 100%;
    flex-shrink: 0;
}

.column-right{
    width: 100%;
}

